Adding more styles

--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
             <div class="grid-items item8"><span>make it fisheye</span></div>
         </div>
     </section>
-
+    <div class="hidden-container">
+        <div class="see-all">SEE ALL</div>
+    </div>
     <footer class="footer">
         <div class="footer-left-flex-container">
             <img src="images/logo.svg" alt="LOGO">
