Adding more styles

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section class="creation-section">
         <header class="creation-section-header">
             <div>Our creations</div>
-            <div>see all</div>
+            <div class="black-background">see all</div>
         </header>
         <div class="creation-section-grid">
             <div class="grid-items item1"><span>deep earth</span></div>
@@ -54,7 +54,7 @@
         </div>
     </section>
     <div class="hidden-container">
-        <div class="see-all">SEE ALL</div>
+        <div class="see-all black-background">SEE ALL</div>
     </div>
     <footer class="footer">
         <div class="footer-left-flex-container">
