--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
             <img src="images/logo.svg" alt="LOGO">
             <div class="nav-links-container">
                 <img id="hidden-logo" src="images/logo.svg" alt="">
-                <img onclick="closeNavCard()" id="close-button" src="images/close_FILL0_wght400_GRAD0_opsz48.svg" alt="">
+                <img id="close-button" src="images/close_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                 <a href="" class="nav-links">about</a>
                 <a href="" class="nav-links">careers</a>
                 <a href="" class="nav-links">events</a>
                 <a href="" class="nav-links">products</a>
                 <a href="" class="nav-links">support</a>
             </div>
-            <img onclick="displayNavCard()" id="hamburger-menu"  src="images/icon-hamburger.svg" alt="">
+            <img id="hamburger-menu"  src="images/icon-hamburger.svg" alt="">
         </header>
         <div class="hero-text">
             <div>Immersive experiences that deliver</div>
