--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="header">
-        <header class="nav-and-logo-container">
+        <div class="nav-and-logo-container">
             <img src="images/logo.svg" alt="LOGO">
             <div class="nav-links-container">
                 <img id="hidden-logo" src="images/logo.svg" alt="">
@@ -22,13 +22,13 @@
                 <a href="" class="nav-links">support</a>
             </div>
             <img id="hamburger-menu"  src="images/icon-hamburger.svg" alt="">
-        </header>
+        </div>
         <div class="hero-text">
             <div>Immersive experiences that deliver</div>
         </div>
     </header>
 
-    <section class="interactive-section">
+    <div class="interactive-section">
         <div class="interactive-image"></div>
         <div class="interactive-section-description">
             <div class="interactive-section-header">
@@ -37,9 +37,9 @@
             <p> Founded in 2011, Loopstudios has been producing world-class virtual reality projects for some of the best companies around the globe. Our award-winning creations have transformed businesses through digital experiences that bind to their brand.
             </p>
         </div>
-    </section>
+    </div>
 
-    <section class="creation-section">
+    <div class="creation-section">
         <header class="creation-section-header">
             <div>Our creations</div>
             <div class="black-background">see all</div>
@@ -54,7 +54,7 @@
             <div class="grid-items item7"><span>the curiosity</span></div>
             <div class="grid-items item8"><span>make it fisheye</span></div>
         </div>
-    </section>
+    </div>
     <div class="hidden-container">
         <div class="see-all black-background">SEE ALL</div>
     </div>
